# ERP-1st

./: .gitignore  AGENTS.md  Dockerfile  PRODUCTION_HARDENING_REPORT.txt  README.md  RUST_INSTALL.md  TEST_REPORT.md  docker-compose.yml  opencode.json  package-lock.json  skills-lock.json
.agents/: arca.agent.md  security.agent.md  tauri.agent.md
.github/workflows/: build-macos.yml  release.yml
.opencode/commands/: erp-check.md
backend/: .env  .env.example  carpinteria.db  config.py  create_plans.py  database.py  ga-erp-backend.spec  hook-reportlab-barcodes.py  main.py  migrate.py  models.py  requirements.txt  schemas.py  test_login.py  test_login_api.py  test_no_dummyuser.py
backend/alembic/versions/: 001_initial_tables.py
backend/hooks/: hook-reportlab.lib.utils.py
backend/routers/: __init__.py  api.py  api_licencias_temp.py  auth.py  electronic_invoicing.py  export.py  invoices.py  presupuestos.py  produccion.py  suscripcion.py
backend/scripts/: backup.sh  restore.sh
backend/services/: afip_service.py  invoice_service.py  wsfe_client.py
backend/utils/: paths.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: GlobalSearch.jsx  (+3 more)
server/: main.py  requirements.txt
testsprite_tests/: testsprite_backend_test_plan.json
testsprite_tests/tmp/: code_summary.yaml  config.json
(+17 files in other folders)
