[package]
name = "ga-software-erp"
version = "1.0.0"
description = "El Menestral - Carpintería ERP"
authors = ["El Menestral"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
